--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build Framework
       run: ./Scripts/build.sh
     - name: Create arhive framework
-      run: cd "./build" && zip -r GrowthBook.xcframework.zip "./GrowthBook.xcframework"
+      run: zip -r GrowthBook.xcframework.zip "./build/GrowthBook.xcframework ./LICENSE"
     - name: release
       uses: actions/create-release@v1
       id: create_release
