--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/GrowthBook.xcframework.zip
+        asset_path: ./GrowthBook.xcframework.zip
         asset_name: GrowthBook.xcframework.zip
         asset_content_type: application/zip
