--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,22 @@
 name: Deploy
 
-on: [workflow_dispatch]
- 
+on:
+  workflow_run:
+    workflows: ["CI main"]
+    types:
+      - completed
 
 jobs:
-  build:
-
+  release:
     runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v3
-    - name: Install Pods and Gems
-      run: |
-        bundle install
-        bundle exec pod install
-    - name: Create XCFramework
-      run: |
-       ./Screpts/build.sh
-   
+      with:
+        clean: 'true'
+        fetch-depth: 0
+    - name: Prepare for release
+      run:  |
+        export LIB_VERSION=${{ steps.gitversion.outputs.SemVer }}
+        pod spec lint
+    - name: Release
+      run: COCOAPODS_TRUNK_TOKEN=$({ secrets.COCOA_KEY }) pod trunk push
