Change path for release CocoaPods

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,4 @@ jobs:
       run:  |
         export LIB_VERSION=${{ steps.gitversion.outputs.SemVer }}
         pod spec lint
-    - name: Release
-      run: COCOAPODS_TRUNK_TOKEN=$({ secrets.COCOA_KEY }) pod trunk push GrowthBook-IOS.podspec
+        COCOAPODS_TRUNK_TOKEN=$({ secrets.COCOA_KEY }) pod trunk push
