--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
         configFilePath: ./.github/gitversion.yml
     - name: Prepare for release
       run:  |
+        set -eo pipefail
         export LIB_VERSION=${{ steps.gitversion.outputs.SemVer }}
-        pod spec lint
-        COCOA_KEY=$({ secrets.COCOA_KEY }) pod trunk push
+        pod spec lint --allow-warnings
+        pod trunk push --allow-warnings
+      env:
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOA_KEY }}
