--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,11 @@ on:
 
 jobs:
   release:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '13.4.1'
     - uses: actions/checkout@v3
       with:
         clean: 'true'
