--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -6,11 +6,8 @@ on:
 
 jobs:
   build_framework:
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '13.4.1'
     - uses: actions/checkout@v3
       with:
         clean: 'true'
