feat: Use macos 14 runner

--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_framework:
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
     - uses: actions/checkout@v3
       with:
