--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         useConfigFile: true
         configFilePath: ./.github/gitversion.yml
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode.app
+      run: sudo xcode-select -switch /Applications/Xcode_15.2.app
     - name: Run Unit Test
       run: ./Scripts/runTest.sh
     - name: Build Framework
